--- a/react/package.json
+++ b/react/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@types/faker": "^4.1.5",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "react-apollo": "^3.1.5"
   }
 }
