--- a/react/package.json
+++ b/react/package.json
@@ -5,6 +5,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@types/graphql": "^14.5.0",
     "@types/node": "^11.12.1",
     "@types/react": "^16.8.10",
     "@types/react-intl": "^2.3.17",
