Chore: Update app name

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "catalog-translation",
+  "name": "admin-catalog-translation",
   "vendor": "vtex",
   "version": "0.0.1",
   "title": "Catalog Translation",
