--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-example",
+  "name": "admin-catalog-translation",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
