--- a/react/package.json
+++ b/react/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/faker": "^4.1.5",
     "faker": "^4.1.0",
-    "react-apollo": "^3.1.5"
+    "react-apollo": "^3.1.5",
+    "xlsx": "^0.16.9"
   }
 }
