--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
     "admin": "0.x",
     "messages": "1.x",
     "docs": "0.x",
-    "node": "6.x"
+    "node": "6.x",
+    "graphql": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
