--- a/manifest.json
+++ b/manifest.json
@@ -21,5 +21,10 @@
     "node": "6.x",
     "graphql": "1.x"
   },
+  "policies": [
+    {
+      "name": "vtex.catalog-graphql:resolve-graphql"
+    }
+  ],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
