Create download manager using vbase for product translations

--- a/manifest.json
+++ b/manifest.json
@@ -31,6 +31,9 @@
         "host": "portal.vtexcommercestable.com.br",
         "path": "/api/catalog_system/*"
       }
+    },
+    {
+      "name": "vbase-read-write"
     }
   ],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
