--- a/node/package.json
+++ b/node/package.json
@@ -4,7 +4,8 @@
   "main": "index.ts",
   "license": "UNLICENSED",
   "dependencies": {
-    "@vtex/api": "6.44.0"
+    "@vtex/api": "6.44.0",
+    "JSONStream": "^1.3.5"
   },
   "devDependencies": {
     "@vtex/tsconfig": "^0.5.6",
