--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "admin-catalog-translation",
   "vendor": "vtex",
-  "version": "1.3.1",
+  "version": "2.0.0",
   "title": "Catalog Translation",
   "description": "",
   "mustUpdateAt": "2022-08-28",
@@ -46,6 +46,8 @@
       "url": "https://support.vtex.com/hc/requests"
     },
     "type": "free",
-    "availableCountries": ["*"]
+    "availableCountries": [
+      "*"
+    ]
   }
 }
